# notes-happ

./: Cargo.toml  README.md  eslint.config.js  flake.nix  happ.nix  package.json  pnpm-lock.yaml
.github/workflows/: test.yaml
dnas/group/: dna.nix
dnas/group/workdir/: dna.yaml
dnas/group/zomes/coordinator/group_profile/: Cargo.toml  zome.nix
dnas/group/zomes/coordinator/group_profile/src/: group_profile.rs  group_profiles.rs  lib.rs
dnas/group/zomes/coordinator/notes/: Cargo.toml  zome.nix
dnas/group/zomes/coordinator/notes/src/: lib.rs
dnas/group/zomes/integrity/group_profile/: Cargo.toml  zome.nix
dnas/group/zomes/integrity/group_profile/src/: group_profile.rs  lib.rs
dnas/group/zomes/integrity/notes/: Cargo.toml  zome.nix
dnas/group/zomes/integrity/notes/src/: note.rs
dnas/lobby/: dna.nix
dnas/lobby/workdir/: dna.yaml
dnas/lobby/zomes/coordinator/group_invites/: Cargo.toml  zome.nix
dnas/lobby/zomes/coordinator/group_invites/src/: lib.rs
dnas/lobby/zomes/integrity/group_invites/: Cargo.toml  zome.nix
dnas/main/: dna.nix
dnas/main/workdir/: dna.yaml
dnas/main/zomes/coordinator/notes/: Cargo.toml  zome.nix
dnas/main/zomes/coordinator/notes/src/: lib.rs
dnas/main/zomes/integrity/notes/: Cargo.toml
dnas/note/: dna.nix
dnas/note/workdir/: dna.yaml
tests/: package.json  vitest.config.ts
tests/src/: app-path.ts
tests/src/group/group_profile/: group-profile.test.ts  group-profiles.test.ts  setup.ts
tests/src/group/notes/: all-notes.test.ts  note.test.ts  setup.ts
tests/src/lobby/group_invites/: setup.ts
tests/src/main/notes/: setup.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: app-styles.ts  context.ts  group-detail.ts  group-list.ts  group-members.ts  holochain-app.ts  home-page.ts  my-contacts.ts  overlay-page.ts  utils.ts
ui/src/group/group-profile/: context.ts  group-profile-client.ts  group-profile-store.ts  mocks.ts  types.ts
ui/src/group/group-profile/elements/: create-group-profile.ts  edit-group-profile.ts  group-profile-context.ts  group-profile-detail.ts  group-profile-summary.ts  group-profiles.ts
ui/src/group/notes/: context.ts  mocks.ts  notes-client.ts  notes-store.ts  types.ts
ui/src/group/notes/elements/: all-notes.ts  create-note.ts  edit-note.ts  note-detail.ts  note-summary.ts  notes-context.ts
ui/src/lobby/group-invites/: context.ts  group-invites-client.ts  group-invites-store.ts  mocks.ts  types.ts
ui/src/lobby/group-invites/elements/: group-invites-context.ts
ui/src/lobby/notes/: notes-store.ts
ui/src/lobby/notes/elements/: all-notes.ts  note-detail-for-role.ts  note-summary-for-role.ts
ui/src/main/notes/: mocks.ts  notes-client.ts  notes-store.ts  types.ts
ui/src/main/notes/elements/: all-notes.ts  note-detail.ts  notes-context.ts
workdir/: happ.yaml  web-happ.yaml
