[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.2"
hdk = "=0.4.2"
serde = "1.0"

[workspace.dependencies.group_invites]
path = "dnas/lobby/zomes/coordinator/group_invites"

[workspace.dependencies.group_invites_integrity]
path = "dnas/lobby/zomes/integrity/group_invites"
