[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.1"
hdk = "=0.5.1"
serde = "1.0"

[workspace.dependencies.group_invites]
path = "dnas/main/zomes/coordinator/group_invites"

[workspace.dependencies.group_invites_integrity]
path = "dnas/main/zomes/integrity/group_invites"

[workspace.dependencies.notes]
path = "dnas/main/zomes/coordinator/notes"

[workspace.dependencies.notes_integrity]
path = "dnas/main/zomes/integrity/notes"
