[package]
name = "group_invites_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "group_invites_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }

private_event_sourcing_integrity = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main-0.4"}
